--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ html {
     font-size: 58.5%;
 }
 
+nav{
+    font-size: 2rem !important;
+}
+
 .intro-right img{
     /* width: 65rem; */
     /* height: 60rem; */
@@ -90,6 +94,10 @@ html {
    
     html {
         font-size: 45%;
+    }
+ 
+    nav{
+        font-size: 4rem !important;
     }
     .intro-left h1{
         top: 30%;
@@ -106,7 +114,9 @@ html {
         html {
             font-size: 45%;
         }
-  
+        nav{
+            font-size: 4rem !important;
+        }
         .intro-left h1{
             top: 30%;
         }        
@@ -122,7 +132,9 @@ html {
             html {
                 font-size: 30%;
             }
-
+            nav{
+                font-size: 4rem !important;
+            }
             .intro-right{
                 width: 35%;
             }
@@ -144,7 +156,9 @@ html {
             html {
                 font-size: 25%;
             }
-
+            nav{
+                font-size: 4rem !important;
+            }
             .intro-left h1{
                 top: 12%;
                 font-size: 2.5rem;
@@ -172,7 +186,9 @@ html {
             html {
                 font-size: 20%;
             }
-
+            nav{
+                font-size: 4rem !important;
+            }
             .intro-left h1{
                 top: 7%;
                 font-size: 3rem;
@@ -201,7 +217,9 @@ html {
             html {
                 font-size: 15%;
             }
-
+            nav{
+                font-size: 2rem !important;
+            }
             .intro-left h1{
                 top: 7%;
                 font-size: 2rem;
@@ -232,5 +250,3 @@ html {
                    height: 0px;
                 }
             }
-
-            
