--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.btn a{
-    text-decoration: none !important;
-}
 html {
     font-size: 70%;
     scroll-behavior: smooth;
 }
+
 body {
     font-family: 'Playfair Display', serif;
-    width: 100%;
-    height: 1000px; 
 }
+
+
+.intro-left{
+    margin: 0rem 0rem 0rem 10rem;
+}
+
+.btn a{
+    text-decoration: none !important;
+    color: black!important;
+}
+.intros{
+    background: linear-gradient(to right,rgb(212, 243, 245),white);
+}
+
 
 .about-heading h1,.education-heading h1, .skills-heading h1,.contact-heading h1,.portfolio-heading h1{
     font-family: 'Merriweather', serif;
@@ -24,6 +30,7 @@ body {
 .copyright p{
     font-size: 1.5rem;
 }
+
 nav li{
     font-size: 1.7rem;
     margin:0rem 2rem 0rem 1rem;
@@ -32,56 +39,28 @@ nav li{
 nav .btn{
     font-size: 1.7rem;
 }
-.btn a{
-    color: white !important;
-}
-.btn a:hover{
-    color: black !important;
-}
 
-h1 .hello{
+nav .btn:hover{
+    background: white;
+    color: black;
+}
+.hello{
     font-weight: 800;
     font-size: 10rem;
 }
 
 
-
-.intro-right{
-    width: 40%;
-}
-
-.intros{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.intro-right {
-    margin-right: -2rem;
-}
-
-.bg-purple{
-    background-color: rgb(36, 9, 36);
-}
-
-.intro-left h1{
-    margin: 4rem;
+.name{
     font-size: 3.6rem;
 }
 
-.box{
-    background-color: rgb(36, 9, 36);
-    width: 100%;
-    height: 60rem;
+.web{
+    font-size: 2rem;
 }
 
 .intro-right img{
-    position: absolute;
-    top: 3rem;
-    right: 4rem;
     width: 60rem;
-    height: 55rem;
-    margin-top: 5rem;
+    height: 60rem;
 }
 
 #web-logo{
@@ -104,197 +83,3 @@ h1 .hello{
     font-weight: 500;
     padding: 3rem 0rem 2rem 0rem;
 }
-
-.footer-color{
-    background-color: rgb(36, 9, 36);
-}
-
-.footer-color img{
-    width: 2rem;
-    height: 2rem;
-}
-
-
-@media screen and (max-width:1180px){
-   
-html {
-    font-size: 58.5%;
-}
-
-nav{
-    font-size: 2rem !important;
-}
-
-.intro-right img{
-    /* width: 65rem; */
-    /* height: 60rem; */
-    margin-top: 8rem;
-}
-}
-
-
-@media screen and (max-width:990px){
-   
-    html {
-        font-size: 50%;
-    }
- 
-    .intro-left h1{
-        top: 30%;
-    }
-    .intro-right img{
-        width: 65rem;
-        height: 55rem;
-        margin-top:10rem;
-    }
-    }
-
-    @media screen and (max-width:850px){
-   
-        html {
-            font-size: 50%;
-        }
-  
-        .intro-left h1{
-            top: 30%;
-            font-size: 2.5rem;
-        }        
-        .intro-right img{
-            width: 60rem;
-            height: 55rem;
-            margin-top: 10rem;
-        }
-        }
-
-        @media screen and (max-width:720px){
-   
-            html {
-                font-size: 30%;
-            }
-            nav{
-                font-size: 4rem !important;
-            }
-            .intro-right{
-                width: 35%;
-            }
-            .intro-left h1{
-                top: 20%;
-            }
-            
-            .intro-right img{
-                width: 60rem;
-                height: 50rem;
-                margin-top: 10rem;
-            }
-            }
-
-        
-            
-        @media screen and (max-width:450px){
-   
-            html {
-                font-size: 50%;
-            }
-    
-            .intro-left h1{
-                top: 12%;
-                font-size: 2rem;
-                
-                margin-left: 2rem !important;
-                padding-left: 0% !important;
-            }
-            .intro-left span{
-                font-weight: 600;
-                font-size: 3rem;
-            }
-
-            .intro-right{
-                width: 30%;
-            }
-
-            .box{
-                height: 25rem;
-            }
-            
-            .intro-right img{
-                width: 20rem;
-                height: 17rem;
-                margin-top: 6rem;
-            }
-        
-            }
-
-            
-        @media screen and (max-width:330px){
-   
-            html {
-                font-size: 50%;
-            }
-
-            .intro-left h1{
-                top: 7rem;
-                font-size: 1rem;
-            }
-            .intro-left span{
-                font-weight: 500;
-                font-size: 2.5rem;
-            }
-
-            .intro-right{
-                width: 30%;
-            }
-            .box{
-                height: 25rem;
-            }
-            .intro-right img{
-                width: 20rem;
-                height: 17rem;
-                margin-top: 6rem;
-            }
-            }
-
-            
-        @media screen and (max-width:250px){
-   
-            html {
-                font-size: 50%;
-            }
-  
-            .intro-left h1{
-                top: 7%;
-                font-size: .4rem;
-            }
-            .intro-left span{
-                font-weight: 600;
-                font-size: 2rem;
-            }
-
-            .box{
-                height: 25rem;
-            }
-
-            .intro-right{
-                width: 36%;
-            }
-
-            .box{
-                height: 20rem;
-            }
-            
-            .intro-right img{
-                width: 15rem;
-                height: 13rem;
-                margin-top: 5rem;
-            }
-            }
-
-            @media screen and (max-width:155){
-                .intro-right img{
-                 display: none !important;
-                }
-                .box{
-                    height: 25rem;
-                }
-            }
-
-            
